# astra

./: .gitignore  README.md  pyproject.toml
src/astra/: __init__.py
src/astra/config/: __init__.py  settings.py
src/astra/kernel/: __init__.py  kernel.py
tests/: test_config.py  test_import.py  test_kernel.py
